2008-10-23  Dennis Friis  <peavey@placid.dk>

	* src/net/tradehandler.cpp: Add support for new athena trade-add
	failure condition; no free slot.

2008-10-22  David Athay  <ko2fan@gmail.com>

	* src/gui/ok_dialog.cpp, src/net/loginhandler.cpp: Now shows ban time.

2008-10-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/particleemitter.cpp,
	src/simpleanimation.cpp, src/resources/spritedef.cpp: Fixed some
	compiler warnings. This probably also fixed the logging of several
	error messages.

2008-10-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/resources/mapreader.cpp: Added support for object groups that
	have an offset.

2008-10-02  Philipp Sehmisch  <tmw@crushnet.org>

	* src/engine.cpp: The "name" property of the map is now used as caption
	of minimap window when it exists.

2008-09-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/setup_video.cpp: Only require a restart to switch to full
	screen with OpenGL on Windows, since it works fine in Linux without
	having to reinitialize the OpenGL state. Adapted change by kraant from
	Aethyra.
	* src/net/network.cpp: Fixed the name of a variable (fix by Scraggy).

2008-08-29  David Athay  <ko2fan@gmail.com>

	* src/monster.cpp, src/resources/monsterinfo.h,
	src/resources/monsterdb.cpp, src/resources/monsterinfo.cpp: Mantis #406
	by jaxad0127 to implement layered sprites.

2008-08-28  Douglas Boffey  <DougABoffey@netscape.net>

	* src/localplayer.cpp, src/text.h, src/gui/viewport.cpp, src/npc.cpp,
	src/textmanager.h, src/player.cpp, src/monster.h, src/textmanager.cpp,
	src/being.cpp, src/npc.h, src/monster.cpp, src/player.h,
	src/localplayer.h, src/player_relations.cpp, src/text.cpp,
	src/Makefile.am, src/being.h: Move any chat, character names, NPC
	names or targetted mob names so that no text will obscure any other
	text. If there is no decent place for the text, it will default to
	overlapping.

2008-08-28  Fate  <fate.tmw@googlemail.com>
