@@ -1,3 +1,11 @@
+2008-10-26  Philipp Sehmisch  <tmw@crushnet.org>
+
+	* src/particle.cpp, src/particleemitter.cpp, src/particleemitter.h,
+	src/particleemitterprop.h, src/utils/minmax.h: Implemented particle
+	emitters with properties which change over time according to wave
+	functions.
+	* src/Makefile.am, src/CMakeLists.txt, tmw.cbp: Updated project files.
+
 2008-10-23  Dennis Friis  <peavey@placid.dk>
 
 	* src/net/tradehandler.cpp: Add support for new athena trade-add
